--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class='input-group mb-3'>
           <input type='text' class='form-control textValue' placeholder='Los Angeles'>
           <div class='input-group-append cityButton'>
-            <button class='btn-primary text-black' type='button' id='button-addon2'><i>Search</i></button>
+            <button class='btn btn-primary text-black' type='button' id='button-addon2'><i>Search</i></button>
           </div>
         </div>
         <div class='container actualSearchhistory'>
